Auth Service'de Security Configuratioon && Kullanıcı kayıt işleminin gerçekleştirilmesi